@@ -1,3 +1,9 @@
+2000-10-03  Robin * Slomkowski  <rslomkow@eazel.com>
+
+	* gconf.spec.in: updated the spec file again
+	if you are interested we are trying to track it
+	http://tinderbox.eazel.com
+
 2000-10-03  Havoc Pennington  <hp@redhat.com>
 
 	* gconf/gconfd.c (close_append_handle): set invalid FILE* to 
